--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -1,20 +1,11 @@
 @import "../bower/reset-css/_reset.scss";
 @import "mixin/mixin";
 
-html, body {
-  min-height: 100%;
-  height: 100%;
-}
+/* core */
+@import "core/global";
 
-body {
-  min-width: 1100px;
-}
-
-.window {
-  position: relative;
-  width: 1100px;
-  margin: 0 auto;
-}
+/* layout */
+@import "layout/footer";
 
 .header {
   position: relative;
