--- a/public/sass/layout/_footer.scss
+++ b/public/sass/layout/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
     padding: 30px 0;
+    background: linear-gradient(bottom, #dce1e8 0%, #ffffff 30%);
     
     .wrapper {
         padding: 0 85px;
