--- a/public/sass/layout/_footer.scss
+++ b/public/sass/layout/_footer.scss
@@ -15,6 +15,8 @@
 }
 
 .footerList {
+    display: table;
+    width: 100%;
     @include core-justify;
     padding-bottom: 40px;
     border-bottom: 1px solid #d8dde5;
