--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -90,7 +90,7 @@
   .item {
     height: 202px;
   }
-  
+
   .img-slider {
     position: relative;
     overflow: hidden;
@@ -132,11 +132,12 @@
 .content-slider {
   position: relative;
   margin-left: -50px;
-  margin-top: 40px;
+  margin-top: 24px;
   z-index: 15;
+  width: 300px;
 
   h3 {
-    font-size: 41px;
+    font-size: 23px;
     font-family: "Myriad Pro", sans-serif;
     color: #fff;
     text-shadow: 1px 1px 3px #000;
@@ -210,5 +211,3 @@
     height: 82px;
   }
 }
-
-
