--- a/public/sass/layout/_footer.scss
+++ b/public/sass/layout/_footer.scss
@@ -1,7 +1,10 @@
 .footer {
+  position: relative;
+  z-index: 2;
+    margin-top: -364px;
     padding: 30px 0;
     background: linear-gradient(bottom, #dce1e8 0%, #ffffff 30%);
-    
+
     .wrapper {
         padding: 0 85px;
     }
@@ -82,7 +85,7 @@
         color: #6a8190;
         margin-top: 20px;
         line-height: normal;
-        
+
         &:first-child { margin-top: 0; }
 
         span {
@@ -189,24 +192,3 @@
     color: #6b859a;
     line-height: 12px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
