--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -11,6 +11,18 @@
 @import "modules/slider-objects-list";
 @import "modules/article";
 
+b, strong {
+  font-weight: bold;
+}
+
+em, i {
+  font-style: italic;
+}
+
+s {
+  text-decoration: line-through;
+}
+
 .header {
   position: relative;
   background: url('../images/header3.png') no-repeat;
@@ -72,7 +84,9 @@
 
 .slider {
   height: 202px;
+  overflow: hidden;
 }
+
 
 .slider-wrap {
   position: relative;
@@ -180,11 +194,71 @@
   }
 }
 
+.article-wrap {
+  position: relative;
+  z-index: 2;
+  margin: 30px 80px;
 
+  @include clearfix;
+}
+
+.article-left {
+  float: left;
+  width: 240px;
+
+  ul {
+
+    li {
+      position: relative;
+      margin-bottom: 15px;
+
+      &:before {
+        position: absolute;
+        width: 6px;
+        height: 6px;
+        background: #ed2e35;
+        border-radius: 50%;
+        left: -18px;
+        top: 50%;
+        margin-top: -3px;
+        content: "";
+      }
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+
+      a {
+        font-size: 14px;
+        font-family: "Myriad Pro", sans-serif;
+        display: block;
+        color: #0d76bf;
+      }
+    }
+  }
+
+}
+
+.img-w-min {
+  width: 100%;
+  height: 100%;
+}
+
+.article-right {
+  float: right;
+  width: 685px;
+  position: relative;
+}
+
+.img-article {
+  height: 265px;
+  position: relative;
+  z-index: 1;
+}
 
 .container {
   position: relative;
-  background: #f7f8fa url('../images/container.png') no-repeat;
+  background: #fff url('../images/container.png') no-repeat;
   background-position: 0 -100px;
   min-height: 200px;
   margin-top: 35px;
@@ -209,5 +283,271 @@
     bottom: 0;
     background: url('../images/shadow-bottom.png') repeat-x;
     height: 82px;
+  }
+}
+
+.helper {
+  display: inline-block;
+  vertical-align: middle;
+  height: 100%;
+}
+
+.text-bottom-article {
+  position: absolute;
+  height: 70px;
+  bottom: 0;
+  width: 457px;;
+  z-index: 2;
+  background: rgba(23, 60, 87, 0.8);
+  font-size: 0;
+
+  p {
+    display: inline-block;
+    vertical-align: middle;
+    color: #fff;
+    font-size: 13px;
+    padding: 0 20px;
+  }
+
+}
+
+.vvva {
+  li {
+    display: block;
+    padding: 6px;
+    padding-bottom: 0;
+
+    .vvva-text {
+      background: #fff;
+      height: 100%;
+      font-size: 12px;
+      padding: 8px;
+    }
+  }
+}
+
+.text-right-article {
+  position: absolute;
+  height: 100%;
+  width: 228px;
+  top: 0;
+  right: 0;
+  background: rgba(23, 60, 87, 0.8);
+  z-index: 3;
+}
+
+
+.container {
+
+  &.obj {
+    margin-top: -32px;
+    background-color: #fff;
+    background-position: 0 50px;
+    &:before {
+      display: none;
+    }
+  }
+
+  h3 {
+    position: relative;
+    z-index: 2;
+
+    padding: 6px 0;
+    font-size: 33px;
+    font-family: "Myriad Pro", sans-serif;
+    color: #00549f;
+    text-align: center;
+  }
+}
+
+.list-obj {
+  margin: 0 20px;
+}
+
+.objects-list {
+  display: table;
+  width: 100%;
+  font-size: 0;
+
+  li.object-item {
+    display: inline-block;
+    vertical-align: top;
+    width: (100% / 4);
+    padding: 0 20px;
+    margin-bottom: 65px;
+    box-sizing: border-box;
+
+    &:hover {
+      .object-wrap {
+        border-color: #1c4d6f;
+      }
+    }
+
+    .object-wrap {
+      min-height: 100px;
+      border: 1px solid #bccad4;
+      padding: 25px 10px;
+    }
+
+    .object-img-wrap {
+      img {
+        display: block;
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    .object-link {
+      display: block;
+      margin-top: 25px;
+      font-family: "Myriad Pro", sans-serif;
+      font-weight: bold;
+      font-size: 12px;
+      color: #00549f;
+    }
+  }
+}
+
+.paginationb {
+  position: relative;
+  margin-bottom: 20px;
+  z-index: 2;
+
+  .pagination-wrap, ul.pagination {
+    display: table;
+    width: 100%;
+    font-size: 0;
+    text-align: center;
+
+    li {
+      font-size: 12px;
+      color: #1c4d6f;
+      display: inline-block;
+      vertical-align: top;
+      padding: 0 2px;
+
+      a {
+        color: #1c4d6f;
+        text-decoration: none;
+      }
+    }
+  }
+
+}
+
+.content-main {
+  position: relative;
+  z-index: 2;
+  font-family: "Myriad Pro", sans-serif !important;
+  font-size: 14px;
+  line-height: 25px;
+  color: #282828;
+  margin: 0 30px 20px;
+
+  * {
+    font-family: "Myriad Pro", sans-serif !important;
+  }
+
+  ul {
+    display: block;
+    margin-left: 30px;
+    list-style-type: disc;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    padding: 20px 0;
+  }
+
+  h1 {
+    font-size: 26px;
+  }
+
+  h2 {
+    font-size: 24px;
+  }
+
+  h3 {
+    font-size: 22px;
+  }
+
+  h4 {
+    font-size: 20px;
+  }
+
+  h5 {
+    font-size: 18px;
+  }
+
+  h6 {
+    font-size: 16px;
+  }
+
+  p {
+    padding: 10px 0;
+  }
+
+  img {
+    padding: 5px;
+  }
+
+  a {
+    color: #00549f !important;
+  }
+
+  table {
+
+
+    td, th {
+      padding: 5px;
+      border: 1px solid #e1e1e1;
+    }
+  }
+}
+
+.form {
+  input, textarea {
+    font-family: "Myriad Pro", sans-serif;
+    display: block;
+  }
+
+  label {
+    span.error {
+      color: red;
+      font-size: 11px;
+    }
+  }
+}
+
+.foto-price {
+  display: block;
+
+}
+
+.calc-block1 {
+  float: left;
+}
+
+.calc-block2 {
+  float: right;
+}
+
+.area-calc {
+  @include clearfix;
+}
+
+.fields1, .fields2 {
+  label {
+    display: block;
+  }
+}
+
+.good-page-tocart-block {
+  margin-top: 20px;
+  display: table;
+  width: 100%;
+
+  img, span {
+    display: inline-block;
+    vertical-align: top;
   }
 }
