--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -501,11 +501,16 @@ s {
   }
 
   img {
-    padding: 5px;
+    padding: 0;
   }
 
+    iframe {
+        padding: 5px;
+    }
+
+
   a {
-    color: #00549f !important;
+    color: #00549f;
   }
 
   table {
@@ -516,6 +521,21 @@ s {
       border: 1px solid #e1e1e1;
     }
   }
+
+    .m-content {
+        @include clearfix;
+        &>a {
+            float: left;
+            padding: 0 10px 0 0;
+            img {
+                display: block;
+            }
+        }
+
+        &>p {
+            padding: 0;
+        }
+    }
 }
 
 .form {
@@ -532,17 +552,207 @@ s {
   }
 }
 
+.item-l {
+    h3 {
+        text-align: left;
+    }
+}
+
 .foto-price {
-  display: block;
+    font-size: 0;
+    display: block;
+    margin-bottom: 20px;
+
+    .foto {
+        line-height: normal;
+        a {
+            display: inline-block;
+            padding-right: 2px;
+
+            img {
+                display: block;
+            }
+        }
+    }
+}
+
+.materials {
+    padding: 0;
+    margin: 0;
+
+    .material-item {
+        margin-bottom: 20px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+
+        .material-hidden-info {
+            display: none;
+        }
+
+        @include clearfix;
+
+        .material-img {
+            display: block;
+            padding: 0 10px 0 0;
+            img {
+                width: auto;
+                display: block;
+            }
+        }
+
+        .material-img, .content-material {
+            float: left;
+        }
+
+        .product-tocart {
+            margin: 0;
+            padding: 0;
+            border: none;
+
+            div.price {
+                display: none;
+            }
+
+            .isubmit {
+                border: none;
+                background: #5b9bd5;
+                border-radius: 5px 0 5px 0;
+                color: #fff;
+                cursor: pointer;
+                outline: none;
+                padding: 10px 20px;
+                text-transform: uppercase;
+                display: inline-block;
+                margin-top: 10px;
+            }
+        }
+
+    }
 
 }
 
-.calc-block1 {
-  float: left;
+.top-tovar {
+    @include clearfix;
 }
 
-.calc-block2 {
-  float: right;
+.title-tovar {
+    float: left;
+    width: 70%;
+}
+
+.btn-buy {
+    float: right;
+    width: 25%;
+    text-align: right;
+
+    .product-tocart {
+        margin: 0;
+        padding: 0;
+        border: none;
+    }
+
+    div.price {
+        display: none;
+    }
+
+    .shk-item {
+        display: inline-block;
+    }
+
+    .isubmit {
+        font-size: 18px;
+        border: none;
+        background: #5b9bd5;
+        border-radius: 5px 0 5px 0;
+        color: #fff;
+        cursor: pointer;
+        outline: none;
+        padding: 10px 20px;
+        text-transform: uppercase;
+        display: inline-block;
+    }
+
+}
+
+.calculator_new {
+    display: none;
+
+    h5 {
+        padding: 10px 0;
+    }
+
+    .calc-block1 {
+        float: left;
+    }
+
+    .calc-block2 {
+        float: left;
+        margin-left: 50px;
+    }
+
+    .fields1, .fields2 {
+        label {
+            display: block;
+        }
+
+        input {
+            font-family: "Myriad Pro", sans-serif;
+            font-size: 14px;
+            padding: 5px;
+            margin: 5px 0;
+        }
+    }
+}
+
+.description_tabs {
+    @include clearfix;
+
+    .tab {
+        display: block;
+        width: 50%;
+        float: left;
+        box-sizing: border-box;
+
+        &.left {
+            padding-right: 5px;
+        }
+
+        &.right {
+            padding-left: 5px;
+        }
+
+        .inner {
+            position: relative;
+            height: 50px;
+            font-size: 0;
+            width: 100%;
+            display: table;
+            background: #0070c0;
+            border: 1px solid #002060;
+            text-align: center;
+            box-sizing: border-box;
+            color: #fff;
+            text-decoration: none;
+
+            &:before {
+                position: absolute;
+                background: url('../images/border.jpg');
+                width: 9px;
+                height: 9px;
+                top: -1px;
+                right: -1px;
+                content: "";
+            }
+
+            span {
+                font-family: "Myriad Pro", sans-serif;
+                font-size: 14px;
+                display: inline-block;
+                vertical-align: middle;
+            }
+        }
+    }
 }
 
 .area-calc {
@@ -553,17 +763,7 @@ s {
   }
 }
 
-.fields1, .fields2 {
-  label {
-    display: block;
-  }
 
-  input {
-    font-family: "Myriad Pro", sans-serif;
-    font-size: 14px;
-    padding: 5px;
-  }
-}
 
 
 .good-page-tocart-block {
