--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -268,27 +268,29 @@ s {
   min-height: 200px;
   margin-top: 35px;
   border: 1px solid transparent;
+  /*
+    &:before, &:after {
+      position: absolute;
+      display: block;
+      left: 0;
+      width: 100%;
+      z-index: 1;
+      content: "";
+    }
 
-  &:before, &:after {
-    position: absolute;
-    display: block;
-    left: 0;
-    width: 100%;
-    z-index: 1;
-    content: "";
-  }
+    &:before {
+      top: 0;
+      background: url('../images/shadow-top.png') repeat-x;
+      height: 120px;
+    }
 
-  &:before {
-    top: 0;
-    background: url('../images/shadow-top.png') repeat-x;
-    height: 120px;
-  }
 
-  &:after {
-    bottom: 0;
-    background: url('../images/shadow-bottom.png') repeat-x;
-    height: 82px;
-  }
+    &:after {
+      bottom: 0;
+      background: url('../images/shadow-bottom.png') repeat-x;
+      height: 82px;
+    }
+    */
 }
 
 .helper {
@@ -373,6 +375,58 @@ s {
   display: table;
   width: 100%;
   font-size: 0;
+
+  li.object-item-block {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+
+    .object-wrap-block {
+      min-height: 100px;
+      border: 1px solid #bccad4;
+      padding: 10px;
+    }
+
+    .object-img-wrap-block {
+      display: table;
+      width: 100%;
+      font-size: 0;
+
+      a.link-img-block {
+        display: inline-block;
+        height: 200px;
+        overflow: hidden;
+        vertical-align: top;
+        width: 190px;
+        img {
+          display: block;
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+    }
+    .pagetitle-object-block {
+      display: block;
+      margin-bottom: 15px;
+      a {
+        display: block;
+        text-decoration: underline;
+        color: #00549f;
+        font-size: 18px;
+      }
+    }
+    .conecnte-object-block {
+      display: inline-block;
+      vertical-align: top;
+      width: 800px;
+      padding: 0 15px;
+      box-sizing: border-box;
+      line-height: 14px;
+      font-size: 12px;
+    }
+  }
 
   li.object-item {
     display: inline-block;
@@ -505,7 +559,7 @@ s {
   }
 
     iframe {
-        padding: 5px;
+        padding: 15px;
     }
 
 
@@ -574,6 +628,38 @@ s {
             }
         }
     }
+}
+
+.main {
+  position: relative;
+
+  &:before, &:after {
+    position: absolute;
+    display: block;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+    content: "";
+  }
+
+  &.obj {
+    &:before {
+      display: none;
+    }
+  }
+
+  &:before {
+    top: 0;
+    background: url('../images/shadow-top.png') repeat-x;
+    height: 120px;
+  }
+
+
+  &:after {
+    bottom: 0;
+    background: url('../images/shadow-bottom.png') repeat-x;
+    height: 82px;
+  }
 }
 
 .materials {
